# athletics-knowledge

./: Model.mwb  README.md  app.py  db_creation.sql  docker-compose.yml  olympics_schema.sql
app/: Dockerfile  __init__.py  app.py  consts.py  pyproject.toml  questions.txt
app/db/: __init__.py  add_users.py  connector.py  data_importer.py  db_params.py
app/db/controllers/: __init__.py  base_controller.py  preferences.py  questions.py  user.py
app/db/entities/: __init__.py  athlete.py  athlete_event.py  countries.py  event.py  olympic.py  question.py  sport.py  team.py  user.py
app/static/css/: leaderboard.css  login.css  preferences.css  question.css  signup.css  style.css
app/static/js/: main.js
app/templates/: about.html  base.html  contact.html  end_game.html  index.html  leaderboard.html  login.html  preferences.html  question.html  signup.html
app/views/: __init__.py  home.py  leaderboard.py  login.py  preferences.py  questions.py
db/: Dockerfile  init.sql
